--- a/LRCModel.tex
+++ b/LRCModel.tex
@@ -1,5 +1,7 @@
 \documentclass[10pt,aspectratio=169]{beamer} %Widescreen
-%\documentclass[10pt]{beamer} %4:3 
+%\documentclass[10pt]{beamer} %4:3
+
+%Versao 1.0 - Helder Oliveira
 
 %OBSW: se a barra de progresso quebrar, mexer na
 % parte "calculate end position" do arquivo beamerouterthemeLRC.sty
