--- a/LRCgraphics/beamerinnerthemeLRC.sty
+++ b/LRCgraphics/beamerinnerthemeLRC.sty
@@ -78,8 +78,8 @@
    {
                   \setbeamertemplate{background}
       {
-                  \includegraphics[width=\paperwidth,height=\paperheight]{LRCgraphics/IC}
-                  \tikz[overlay] \fill[fill opacity=0.88,fill=white] (0,0) rectangle (-\paperwidth,\paperheight);
+                  \includegraphics[width=\paperwidth,height=\paperheight]{LRCgraphics/logo-ic}
+                  \tikz[overlay] \fill[fill opacity=0.97,fill=white] (0,0) rectangle (-\paperwidth,\paperheight);
        }
     }
 
