Updates from ShareLaTeX

--- a/LRCModel.tex
+++ b/LRCModel.tex
@@ -4,7 +4,11 @@
 % Widescreen
 %\documentclass[10pt,aspectratio=169]{beamer}
 % 4:3
-\documentclass[10pt]{beamer} 
+\documentclass[10pt]{beamer}
+
+%Exibir notas na segunda tela
+% \usepackage{pgfpages}
+% \setbeameroption{show notes on second screen}
 
 %OBS: se a barra de progresso quebrar, mexer na
 % parte "calculate end position" do arquivo beamerouterthemeLRC.sty
